added ems project

--- a/projects.html
+++ b/projects.html
@@ -171,32 +171,7 @@
                 </div>
                 <div class="row portfolio-container">
                     <!-- angular projects  -->
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-angular">
-                        <div class="portfolio-wrap">
-                            <img src="projects images/srm.png" class="img-fluid" alt="SRM UNIVERSITY Redesigned Website">
-                            <div class="portfolio-info">
-                                <h4>SRM UNIVERSITY Redesigned Website</h4>
-                                <p> </p>
-                                <div class="portfolio-links">
-                                    <a href="projects images/srm.png" data-gall="portfolioGallery" title="SRM UNIVERSITY Redesigned Website" class="venobox"><i class="fas fa-images"></i></a>
-                                    <a href="https://srm-website-redesign-sbiswas2209.vercel.app/" target="_blank"><i class="fas fa-link"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-angular">
-                        <div class="portfolio-wrap">
-                            <img src="projects images/covinex.png" class="img-fluid" alt="Covinex Covid testing WebApp">
-                            <div class="portfolio-info">
-                                <h4>Covinex</h4>
-                                <p> </p>
-                                <div class="portfolio-links">
-                                    <a href="projects images/srm.png" data-gall="portfolioGallery" title="Covinex Covid testing WebApp" class="venobox"><i class="fas fa-images"></i></a>
-                                    <a href="https://covinex.netlify.app/home" target="_blank"><i class="fas fa-link"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+
                     <div class="col-lg-4 col-md-6 portfolio-item filter-angular">
                         <div class="portfolio-wrap">
                             <img src="projects images/swasthify.png" class="img-fluid" alt="Swasthify WebApp">
@@ -225,6 +200,20 @@
                     </div>
                     <div class="col-lg-4 col-md-6 portfolio-item filter-angular">
                         <div class="portfolio-wrap">
+                            <img src="projects images/covinex.png" class="img-fluid" alt="Covinex Covid testing WebApp">
+                            <div class="portfolio-info">
+                                <h4>Covinex</h4>
+                                <p> </p>
+                                <div class="portfolio-links">
+                                    <a href="projects images/srm.png" data-gall="portfolioGallery" title="Covinex Covid testing WebApp" class="venobox"><i class="fas fa-images"></i></a>
+                                    <a href="https://covinex.netlify.app/home" target="_blank"><i class="fas fa-link"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-angular">
+                        <div class="portfolio-wrap">
                             <img src="projects images/iwsc.png" class="img-fluid" alt="iwsc logo">
                             <div class="portfolio-info">
                                 <h4>IWSC Student Chapter Portal</h4>
@@ -249,7 +238,32 @@
                             </div>
                         </div>
                     </div>
-
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-angular">
+                        <div class="portfolio-wrap">
+                            <img src="projects images/employee_management.png" class="img-fluid" alt="Employee Management System">
+                            <div class="portfolio-info">
+                                <h4>Employee Management System</h4>
+                                <p> </p>
+                                <div class="portfolio-links">
+                                    <a href="projects images/employee_management.png" data-gall="portfolioGallery" title="Employee Management System" class="venobox"><i class="fas fa-images"></i></a>
+                                    <a href="https://empmanagesys.netlify.app/employees" target="_blank"><i class="fas fa-link"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-angular">
+                        <div class="portfolio-wrap">
+                            <img src="projects images/srm.png" class="img-fluid" alt="SRM UNIVERSITY Redesigned Website">
+                            <div class="portfolio-info">
+                                <h4>SRM UNIVERSITY Redesigned Website</h4>
+                                <p> </p>
+                                <div class="portfolio-links">
+                                    <a href="projects images/srm.png" data-gall="portfolioGallery" title="SRM UNIVERSITY Redesigned Website" class="venobox"><i class="fas fa-images"></i></a>
+                                    <a href="https://srm-website-redesign-sbiswas2209.vercel.app/" target="_blank"><i class="fas fa-link"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-lg-4 col-md-6 portfolio-item filter-angular">
                         <div class="portfolio-wrap">
                             <img src="projects images/todo.png" class="img-fluid" alt="Todo list app logo">
@@ -270,7 +284,7 @@
                                 <h4>Red Sands Restaurant</h4>
                                 <p> </p>
                                 <div class="portfolio-links">
-                                    <a href="projects images/iwsc.png" data-gall="portfolioGallery" title="Red Sands Restaurant App" class="venobox"><i class="fas fa-images"></i></a>
+                                    <a href="projects images/redsands.png" data-gall="portfolioGallery" title="Red Sands Restaurant App" class="venobox"><i class="fas fa-images"></i></a>
                                     <a href="https://pranjay-poddar.github.io/Red-Sands-Restaurant-App/" target="_blank"><i class="fas fa-link"></i></a>
                                 </div>
                             </div>
