--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@
             <script src="js/typed.js"></script>
             <script>
                 var typed = new Typed('.type', {
-                    strings: [' Full Stack Web Developer',
+                    strings: [' Full Stack Developer',
                         'Competetive Programmer',
                         'Graphic Designer',
-                        'Data Science Enthusiast',
+                        'DS & Algo Geek ',
                         'Cloud Computing Enthusiast',
                     ],
                     typeSpeed: 60,
@@ -272,13 +272,13 @@
             <div class="row skills-content">
                 <div class="col lg-6">
                     <div class="progress">
-                        <span class="skill">C<i class="val">95%</i></span>
+                        <span class="skill">C/C++<i class="val">95%</i></span>
                         <div class="progress-bar-wrap">
                             <div class="progress-bar counter" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">95</div>
                         </div>
                     </div>
                     <div class="progress">
-                        <span class="skill">C++<i class="val">90%</i></span>
+                        <span class="skill">DS & Algo<i class="val">90%</i></span>
                         <div class="progress-bar-wrap">
                             <div class="progress-bar counter" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">90</div>
                         </div>
@@ -290,7 +290,7 @@
                         </div>
                     </div>
                     <div class="progress">
-                        <span class="skill">Python<i class="val">60%</i></span>
+                        <span class="skill">Typescript<i class="val">60%</i></span>
                         <div class="progress-bar-wrap">
                             <div class="progress-bar counter" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">60</div>
                         </div>
@@ -298,28 +298,28 @@
                 </div>
                 <div class="col lg-6">
                     <div class="progress">
-                        <span class="skill">Web Dev<i class="val">90%</i></span>
+                        <span class="skill">HTML/CSS<i class="val">95%</i></span>
                         <div class="progress-bar-wrap">
-                            <div class="progress-bar counter" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">90</div>
+                            <div class="progress-bar counter" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">95</div>
                         </div>
                     </div>
                     <div class="progress">
-                        <span class="skill">Angular<i class="val">75%</i></span>
+                        <span class="skill">Angular<i class="val">80%</i></span>
                         <div class="progress-bar-wrap">
 
-                            <div class="progress-bar counter" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75</div>
+                            <div class="progress-bar counter" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80</div>
                         </div>
                     </div>
                     <div class="progress">
-                        <span class="skill">CP<i class="val">85%</i></span>
+                        <span class="skill">MySQL<i class="val">85%</i></span>
                         <div class="progress-bar-wrap">
-                            <div class="progress-bar counter" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">85</div>
+                            <div class="progress-bar counter" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85</div>
                         </div>
                     </div>
                     <div class="progress">
-                        <span class="skill">Graphics<i class="val">95%</i></span>
+                        <span class="skill">Spring Boot<i class="val">55%</i></span>
                         <div class="progress-bar-wrap">
-                            <div class="progress-bar counter" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">95</div>
+                            <div class="progress-bar counter" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">55</div>
                         </div>
                     </div>
                 </div>
