added internships section

--- a/index.html
+++ b/index.html
@@ -156,7 +156,6 @@
             <!-- </div> -->
             <h2 id="greetings">Hi!, My Name Is</h2>
             <h1>Pranjay Poddar</h1>
-
             <h2 class="typeh2">I am a <span class="type"></span></h2>
 
             <script src="js/typed.js"></script>
@@ -221,6 +220,7 @@
                                 <br>
                             </ul>
                         </div>
+
                     </div>
                     <a href="https://drive.google.com/file/d/1JpvL2sZ8O4TNjZkw-KPpRONWTExmcp6z/view?usp=sharing" class="button4" target="_blank">Download Resume</a>
                 </div>
@@ -358,7 +358,13 @@
                     </div>
                 </div>
             </div>
+            <div class="col-lg-12 text-center">
+                <a href="https://www.credly.com/badges/43dfa67a-d420-4a18-8959-1df257330546?source=linked_in_profile">
+                    <h5 class="badge badge-light" style="font-size: 15px; background-color: rgb(200, 145, 252); margin-top:5% ;">AWS Certified Cloud Practitioner(2021-24)</h5>
+                </a>
+            </div>
         </div>
+
         <!--End CounterUp Js-->
         </div>
         </div>
@@ -369,8 +375,42 @@
         <div class="container">
             <div class="section-title">
                 <h2>Experience</h2>
-                <p>Worked in various tech, non-tech clubs and teams of SRM Institute Of Science And Technology KTR Chennai.
+
+                <div class="row">
+                    <div class="col-lg-12">
+                        <h3 class='experience-title text-center'>Internship Experience</h3>
+                        <div class="row">
+                            <div class="col-lg-6" data-aos="fade-right" data-aos-duration="1200" data-aos-easing="ease-in-out">
+                                <div class="experience-item">
+                                    <h4>Highradius Winter Intern</h4>
+                                    <p>Highway to Highradius Tech Track</p>
+                                    <br>
+                                    <h5>February,2022-Present</h5>
+                                    <br>
+                                    <img src="./img/high-radius.png" height="70px" width="250px" style="margin-bottom: 10%;">
+                                </div>
+                            </div>
+
+                            <div class="col-lg-6" data-aos="fade-left" data-aos-duration="1200" data-aos-easing="ease-in-out">
+                                <div class="experience-item">
+                                    <h4>Inception Wave Pvt. Ltd</h4>
+                                    <p>Full Stack Development Intern</p>
+                                    <br>
+                                    <h5>January,2021-March,2021</h5>
+                                    <p class="experience-item">Graphic Design Intern</p>
+                                    <h5>April,2021-May,2021</h5>
+                                    <br>
+                                    <img src="./img/inception_wave.png" height="100px" width="100px">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <br>
+                <p class="text-center">Worked in various tech, non-tech clubs and teams of SRM Institute Of Science And Technology KTR Chennai.
                 </p>
+                <br>
             </div>
             <div class="row">
                 <div class="col-lg-6" data-aos="fade-right" data-aos-duration="1200" data-aos-easing="ease-in-out">
@@ -456,10 +496,16 @@
                         <p><i class="fas fa-caret-right"></i>Mentor</p>
 
                     </div>
+                    <div class="experience-item">
+                        <h4>Hacktoberfest'21</h4>
+                        <h5>October,2021</h5>
+                        <p><i class="fas fa-caret-right"></i>Maintainer & Contributor</p>
+
+                    </div>
 
                 </div>
-                <div class="col-lg-6 text-center" data-aos="fade-left" data-aos-duration="1200" data-aos-easing="ease-in-out">
-                    <img class="grow text-center" src="./img/open-source.svg">
+                <div class="col-lg-6 text-center align-middle" data-aos="fade-left" data-aos-duration="1200" data-aos-easing="ease-in-out">
+                    <img class="grow text-center " style="margin-top: 10%;" src="./img/open-source.svg">
                 </div>
             </div>
         </div>
