added aws cloud practitioner

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
     <script>
         // right click disable---------start--------------------------
-        document.addEventListener("contextmenu", function(e) {
-            e.preventDefault();
-        }, false);
+        // document.addEventListener("contextmenu", function(e) {
+        //     e.preventDefault();
+        // }, false);
         // right click disable---------end--------------------------
         // dark mode toggle start-----------------------------------
         function lightmode() {
@@ -360,7 +360,7 @@
             </div>
             <div class="col-lg-12 text-center">
                 <a href="https://www.credly.com/badges/43dfa67a-d420-4a18-8959-1df257330546?source=linked_in_profile">
-                    <h5 class="badge badge-light" style="font-size: 15px; background-color: rgb(200, 145, 252); margin-top:5% ;">AWS Certified Cloud Practitioner(2021-24)</h5>
+                    <h5 class="badge badge-light awscloud">AWS Certified Cloud Practitioner(2021-24)</h5>
                 </a>
             </div>
         </div>
