--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
     <script>
         // right click disable---------start--------------------------
-        // document.addEventListener("contextmenu", function(e) {
-        //     e.preventDefault();
-        // }, false);
+        document.addEventListener("contextmenu", function(e) {
+            e.preventDefault();
+        }, false);
         // right click disable---------end--------------------------
         // dark mode toggle start-----------------------------------
         function lightmode() {
